fix search bar on mobile version

--- a/src/components/MainContent/mainContent.scss
+++ b/src/components/MainContent/mainContent.scss
@@ -61,9 +61,9 @@
     .search-bar {
       margin-left: 0;
     }
-    .MuiFormControl-root {
-      z-index: -99;
-    }
+    // .MuiFormControl-root {
+    //   z-index: -99;
+    // }
     .table {
       padding: 1px 10px;
     }
